# Soccer-Data-Project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: README.md  commit-push.md  session-start.md
.claude/skills/: README.md
.claude/skills/commit-push/: SKILL.md
src/soccer_data/: client.py  models.py
tests/: test_client.py
