[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soccer-data"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-httpx",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soccer_data"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
